[package]
name = "tack"
version = "0.1.0"
edition = "2024"
description = "A smart CLI bookmark manager for commands and directories"
license = "MIT"
repository = "https://github.com/EJ-Lan/tack"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
